--- a/static/css/reservation.css
+++ b/static/css/reservation.css
@@ -295,3 +295,49 @@ html, body {
 #step_one_button:active {
 	background-color: #5F9F9F;
 }
+
+.slide_button {
+/* Borders */
+	border: 3px solid black;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+
+	/* Position and Sizing */
+	/* TODO: Make this display properly on small monitors 
+		Make multiple rows of nav buttons?
+		Make it scroll? (No, bad idea, all content should be visible)
+	*/
+	/* TODO: Draw attention to the Reservations button with CSS/JS */
+	width:100px;
+	display: inline-block;
+	padding: 10px;
+	margin: 0px 10px;
+	overflow: hidden;
+
+	/* Fonts */
+	/* TODO: Move this to common font location */
+	font-family: Verdana, Georgia, sans-serif;
+	color: #FFF;
+	font-size: 20pt;
+	font-weight: 900;
+	text-align: center;
+
+	/* Background */
+	background-color: #458B00;
+
+	/* CSS3 Transitions */
+	transition: border-color 0.2s;
+	-webkit-transition: border-color 0.2s;
+	transition: background-color 0.2s;
+	-webkit-transition: background-color 0.2s;
+}
+
+.slide_button:hover {
+	border-color: yellow;
+	cursor: pointer;
+}
+
+.slide_button:active {
+	background-color: #5F9F9F;
+}
