--- a/static/css/final.css
+++ b/static/css/final.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Keania+One);
 
 html, body {
-    padding: 10px;
+    padding: 0px 10px;
 }
 
 #navbar {
