--- a/static/css/final.css
+++ b/static/css/final.css
@@ -45,6 +45,7 @@ html, body {
 }
 
 #navbar a div {
+    min-height: 50px;
     border: 4px solid #27ae60;
     background-color: #34495e;
     transition: background-color 0.5s;
